--- a/src/index.css
+++ b/src/index.css
@@ -124,3 +124,11 @@ table {
 .outline-auto {
   outline-style: auto;
 }
+
+.text-clamp-2 {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  line-clamp: 2;
+  -webkit-line-clamp: 2;
+  overflow: hidden;
+}
